# small3d-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
AvoidTheBug3D/: CMakeLists.txt  LICENSE  README.md
AvoidTheBug3D/assets/: bug.blend  goat.blend  goatBB.blend  tree.blend
AvoidTheBug3D/cmake/: FindSMALL3D.cmake
AvoidTheBug3D/include/: GameLogic.hpp
AvoidTheBug3D/resources/shaders/OpenGL21/: perspectiveMatrixLightedShader.vert  simpleShader.frag  textureShader.frag
AvoidTheBug3D/resources/shaders/OpenGL33/: perspectiveMatrixLightedShader.vert  simpleShader.frag  textureShader.frag
AvoidTheBug3D/src/: CMakeLists.txt  GameLogic.cpp  main.cpp
ChaseTheGoat3D/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
ChaseTheGoat3D/include/: GameLogic.hpp  KeyInput.hpp
ChaseTheGoat3D/src/: CMakeLists.txt  GameLogic.cpp  main.cpp
