CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
PROJECT(demo)

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

set(CMAKE_C_FLAGS "${CONAN_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CONAN_CXX_FLAGS}")
set(CMAKE_SHARED_LINKER_FLAGS "${CONAN_SHARED_LINKER_FLAGS}")

ADD_EXECUTABLE(ball main.cpp)

TARGET_LINK_LIBRARIES(ball PUBLIC "${CONAN_LIBS}")
SET_TARGET_PROPERTIES(ball PROPERTIES LINK_FLAGS "${CONAN_EXE_LINKER_FLAGS}")

FILE(COPY "resources" DESTINATION "${PROJECT_BINARY_DIR}/bin")
